Fixed button visibility
Now if a layer is locked or hidden, the icon will always be shown.

--- a/css/pixel-editor.scss
+++ b/css/pixel-editor.scss
@@ -111,7 +111,7 @@ body {
       }
     }
 
-    li {
+    .layer-button {
       visibility:hidden;
       height:50%;
     }
@@ -152,7 +152,7 @@ body {
 
 .layers-menu-entry:hover, .selected-layer {
   ul.layer-buttons li{
-    visibility:visible;
+    visibility:visible !important;
   }
 
   color: color(base, foreground, bold);
